[gd_scene load_steps=27 format=3 uid="uid://dm0mrt40uw7my"]

[ext_resource type="Script" path="res://light_ghost.gd" id="1_b8ggq"]
[ext_resource type="Texture2D" uid="uid://dcb6qbfep81h3" path="res://assets/Ghost enemy by RgsDev/16x16 Ghost.png" id="2_4kulr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h0bix"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nlxhe"]
radius = 125.668

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uyjdq"]
radius = 12.5
height = 28.0

[sub_resource type="AtlasTexture" id="AtlasTexture_537un"]
atlas = ExtResource("2_4kulr")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l10pl"]
atlas = ExtResource("2_4kulr")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyu7l"]
atlas = ExtResource("2_4kulr")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpe21"]
atlas = ExtResource("2_4kulr")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_btdh0"]
atlas = ExtResource("2_4kulr")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak33b"]
atlas = ExtResource("2_4kulr")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_obvjn"]
atlas = ExtResource("2_4kulr")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7iam6"]
atlas = ExtResource("2_4kulr")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl040"]
atlas = ExtResource("2_4kulr")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn6jx"]
atlas = ExtResource("2_4kulr")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5arh"]
atlas = ExtResource("2_4kulr")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4w1c"]
atlas = ExtResource("2_4kulr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c62h"]
atlas = ExtResource("2_4kulr")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1r1k"]
atlas = ExtResource("2_4kulr")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfl0i"]
atlas = ExtResource("2_4kulr")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1k786"]
atlas = ExtResource("2_4kulr")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qlsp"]
atlas = ExtResource("2_4kulr")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g56er"]
atlas = ExtResource("2_4kulr")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqgxh"]
atlas = ExtResource("2_4kulr")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m8et"]
atlas = ExtResource("2_4kulr")
region = Rect2(192, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_icgsn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_537un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l10pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyu7l")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpe21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btdh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak33b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obvjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iam6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl040")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn6jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5arh")
}],
"loop": true,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4w1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c62h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1r1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfl0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k786")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qlsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g56er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqgxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m8et")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[node name="light ghost" type="CharacterBody2D" node_paths=PackedStringArray("animation", "time_alive_timer", "target_timer", "targeting_area")]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_b8ggq")
animation = NodePath("transform node/AnimatedSprite2D")
time_alive_timer = NodePath("time_alive_timer")
target_timer = NodePath("target_timer")
targeting_area = NodePath("targeting area")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h0bix")

[node name="time_alive_timer" type="Timer" parent="."]

[node name="targeting area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="targeting area"]
z_index = 4
shape = SubResource("CircleShape2D_nlxhe")

[node name="target_timer" type="Timer" parent="."]
wait_time = 6.0

[node name="transform node" type="Node2D" parent="."]

[node name="hurtbox" type="Area2D" parent="transform node"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="transform node/hurtbox"]
position = Vector2(-1, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_uyjdq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="transform node"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_icgsn")
animation = &"attack"
frame_progress = 0.395808

[connection signal="timeout" from="time_alive_timer" to="." method="death"]
[connection signal="timeout" from="target_timer" to="." method="pick_new_target"]
[connection signal="area_entered" from="transform node/hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="animation_finished" from="transform node/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
